RESOLVED FIXED296193
AX: comment about scrollViewParent is incorrect
https://bugs.webkit.org/show_bug.cgi?id=296193
Summary AX: comment about scrollViewParent is incorrect
Dominic Mazzoni
Reported 2025-07-18 09:37:47 PDT
// This will return the parent of the AXWebArea, if this is a web area. if (id scrollView = scrollViewParent(*backingObject)) return scrollView;
Attachments
Radar WebKit Bug Importer
Comment 1 2025-07-18 09:37:58 PDT
Dominic Mazzoni
Comment 2 2025-07-18 13:13:46 PDT
EWS
Comment 3 2025-07-18 14:16:37 PDT
Committed 297620@main (683d4a6a43b6): <https://commits.webkit.org/297620@main> Reviewed commits have been landed. Closing PR #48261 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.