AX: comment about scrollViewParent is incorrect https://bugs.webkit.org/show_bug.cgi?id=296193 rdar://156154357

Reviewed by Tyler Wilcock.

Fix an out-of-date comment.

* Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper accessibilityAttributeValue:]):

Canonical link: https://commits.webkit.org/297620@main